src/styles/site.less
.container-fluid {
  padding-top: 15px;
}

.scrollable-content {
  overflow-y: auto;
}

@main-row-height: 300px;
.tall-object {
  height: @main-row-height;
}

@short-row-height: 100px;
.short-object {
  height: @short-row-height;
}

@standard-border-radius: 5px;
@big-button-width: 80px;
div.display-item {
  // generic display
  margin-bottom: 20px;
  margin-right: 10px;
  border-radius: @standard-border-radius;
  box-shadow: 10px 10px 28px 2px rgba(0, 0, 0, 0.75);
  // inner arrangement
  display: flex;
  flex-direction: column;
  // list group
  div.list-group {
    border-top-left-radius: 0;
    border-bottom-right-radius: 0;
    .list-group-item {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
    .scrollable-content;
    margin-bottom: 4px;
  }
  div.input-group {
    // make the corners line up
    input {
      border-bottom: 1px solid #555;
      border-radius: @standard-border-radius @standard-border-radius 0 0;
    }
    button {
      border-bottom-right-radius: 0;
    }
  }
  // panel display
  div.panel {
    height: 100%;
    margin-bottom: 0;
    div.panel-heading {
      display: flex;
      justify-content: space-between;
      div.btn-group button {
        width: @big-button-width;
      }
    }
    div.panel-body {
      height: 100%;
    }
  }
}

textarea {
  .scrollable-content;
  resize: none;
}

